# Generate-Differences

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gen_diff/: build.py  stylish.py
gen_diff/output_formats/: format_json.py  plain.py  stylish.py
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  build.py  build_diff.py  generate_diff.py  parse_args.py  parser.py
gendiff/output_formats/: format_json.py  json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py  main.py
tests/: test_gendiff.py
tests/fixtures/: diff_identical_nested_dictionaries.md  identical_nested_dictionaries_file2.yaml  result_gendiff_format_json.json
